--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,105 @@
-body {
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Pretendard", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  text-decoration: none;
+  letter-spacing: 0;
+  word-break: keep-all;
+  object-fit: contain;
+  list-style: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-decoration: none;
+  color: var(--font-black);
+}
+:root{
+  --main: #127C56;
+  --sub-color:#EAB64D;
+  --font-main:#365331;
+  --alert-green : #31A215;
+  --alert-amber : #EF8523;
+  --alert-red: #F14646;
+  --font-black:#393939;
+  --font-gray: #737373;
+  --bg-gray : #F8F8F8;
+  --pure-white : #FFFFFF;
+  --line-black:#777777;
+  --line-gray: #BABABA;
+  --line-light-gray:#EDEDED;
+}
+
+a, input, button, select, textarea{
+  text-decoration: none;
+  outline-style: none;
+  color: inherit;
+  border: none;
+}
+
+.light{
+  font-weight: 200;
+}
+.medium{
+  font-weight: 500;
+}
+.bold {
+  font-weight: 700;
+}
+
+
+.sub {
+  font-size: 0.8rem;
+}
+
+.h4 {
+  font-size: 1.2rem;
+}
+.h3 {
+  font-size: 1.4rem;
+}
+.h2 {
+  font-size: 1.6rem;
+}
+.h1 {
+  font-size: 1.8rem;
+}
+.mt-5 {
+  margin-top: 5px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
+.mb-10 {
+  margin-bottom: 10px;
+}
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.mr-4 {
+  margin-right: 4px;
+}
+.mr-8 {
+  margin-right: 8px;
+}
+.mr-16 {
+  margin-right: 16px;
+}
+.mr-24 {
+  margin-right: 24px;
+}
+.mr-36{
+  margin-right: 24px;
+}
+
+.sig-border {
+  border-radius: 8px 0px 8px 0px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
