--- a/client/src/index.css
+++ b/client/src/index.css
@@ -158,6 +158,10 @@ input:focus, textarea:focus{
   text-align: center;
 }
 
+.display-none{
+  display: none;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
