--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,9 +42,7 @@ a, input, button, select, textarea{
   color: inherit;
   border: none;
 }
-.font-gray{
-  color: var(--font-gray);
-}
+
 input, textarea{
   padding: 8px;
   outline-style: solid;  
@@ -56,6 +54,8 @@ input:focus, textarea:focus{
   filter: drop-shadow(0px 0px 2px #127C56);
   color: var(--font-main)
 }
+
+
 /* 아이콘 active */
 .activeIcon span{
     color: var(--main);
@@ -66,6 +66,14 @@ input:focus, textarea:focus{
 }
 .disableIcon svg,.activeIcon p{
   fill: var(--font-gray);
+}
+
+/* 폰트 색깔 설정 */
+.font-gray{
+  color: var(--font-gray);
+}
+.font-main{
+  color: var(--font-main);
 }
 
 /* 폰트 두께 설정 */
