--- a/client/src/index.css
+++ b/client/src/index.css
@@ -113,6 +113,9 @@ input:focus, textarea:focus{
 .mt-16{
   margin-top: 16px;
 }
+.mb-3 {
+  margin-bottom: 3px;
+}
 .mb-10 {
   margin-bottom: 10px;
 }
