✨ 프로필 반려식물 컴포넌트 추가

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -156,7 +156,9 @@ input:focus, textarea:focus{
 .ml-36{
   margin-left: 36px;
 }
-
+.ml-54{
+  margin-left: 54px;
+}
 .sig-border16 {
   border-radius: 16px 0px 16px 0px;
 }
