--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,10 @@
   --medium:500;
   --light:200;
   --sub-font-size: 0.8rem;
+  --sig-border-4: 4px 0px 4px 0px;
+  --sig-border-8: 8px 0 8px 0 ;
+  --sig-border-16: 16px 0px 16px 0px;
+
 }
 
 a, input, button, select, textarea{
@@ -117,6 +121,9 @@ input:focus, textarea:focus{
 }
 .mb-3 {
   margin-bottom: 3px;
+}
+.mb-8 {
+  margin-bottom: 8px;
 }
 .mb-10 {
   margin-bottom: 10px;
