:zap: 댓글 컴포넌트 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -128,6 +128,9 @@ input:focus, textarea:focus{
 .mb-10 {
   margin-bottom: 10px;
 }
+.mb-15 {
+  margin-bottom: 15px;
+}
 .mb-20 {
   margin-bottom: 20px;
 }
