:zap: 댓글 컴포넌트 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -110,6 +110,9 @@ input:focus, textarea:focus{
   font-size: 1.8rem;
 }
 /* 마진 설정 */
+.mt-1 {
+  margin-top: 1px;
+}
 .mt-4 {
   margin-top: 4px;
 }
