--- a/client/src/index.css
+++ b/client/src/index.css
@@ -125,6 +125,12 @@ input:focus, textarea:focus{
 .mb-3 {
   margin-bottom: 3px;
 }
+.mb-5 {
+  margin-bottom: 5px;
+}
+.mb-6 {
+  margin-bottom: 6px;
+}
 .mb-8 {
   margin-bottom: 8px;
 }
@@ -136,6 +142,9 @@ input:focus, textarea:focus{
 }
 .mb-20 {
   margin-bottom: 20px;
+}
+.mb-25 {
+  margin-bottom: 25px;
 }
 
 .mr-4 {
