:zap: 커뮤니티 댓글 간격 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -116,6 +116,9 @@ input:focus, textarea:focus{
 .mt-4 {
   margin-top: 4px;
 }
+.mt-7 {
+  margin-top: 7px;
+}
 .mt-8 {
   margin-top: 8px;
 }
@@ -130,6 +133,9 @@ input:focus, textarea:focus{
 }
 .mb-6 {
   margin-bottom: 6px;
+}
+.mb-7 {
+  margin-bottom: 7px;
 }
 .mb-8 {
   margin-bottom: 8px;
