--- a/client/src/index.css
+++ b/client/src/index.css
@@ -152,6 +152,9 @@ textarea:focus {
 .mb-15 {
   margin-bottom: 15px;
 }
+.mb-16 {
+  margin-bottom: 16px;
+}
 .mb-20 {
   margin-bottom: 20px;
 }
@@ -224,21 +227,21 @@ code {
 
 /* 말 줄임 표시 */
 .text-overflow2 {
-   text-overflow: ellipsis;
-   overflow: hidden;
-   word-break: break-word;
-    
-   display: -webkit-box;
-   -webkit-line-clamp: 2;
-   -webkit-box-orient: vertical
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-break: break-word;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .text-overflow3 {
   text-overflow: ellipsis;
   overflow: hidden;
   word-break: break-word;
-   
+
   display: -webkit-box;
   -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical
+  -webkit-box-orient: vertical;
 }
