:zap: Signup page 스타일 수정 완료

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -84,6 +84,9 @@ textarea:focus {
 .font-main {
   color: var(--font-main);
 }
+.font-alert-red {
+  color: var(--alert-red);
+}
 
 /* 폰트 두께 설정 */
 .light {
