:bug: modal bug fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -246,12 +246,14 @@ code {
   text-overflow: ellipsis;
   overflow: hidden;
   word-break: break-word;
+  display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
+
 @media screen and(max-width:1024px)   {
   .display-none-from-tablet{
-    display: none !important;
+    display: none;
   }
 }
 
