--- a/client/src/index.css
+++ b/client/src/index.css
@@ -185,6 +185,10 @@ input.checkbox-20 {
   margin-bottom: 3px;
 }
 
+.mb-4 {
+  margin-bottom: 4px;
+}
+
 .mb-5 {
   margin-bottom: 5px;
 }
@@ -278,7 +282,7 @@ input.checkbox-20 {
 }
 
 .pt-5 {
-  padding-bottom: 9px;
+  padding-top: 5px;
 }
 
 .sig-border16 {
