:zap: 댓글 컴포넌트 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -305,6 +305,10 @@ input.checkbox-20 {
   display: none;
 }
 
+.space-between{
+  align-content: space-between;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
