--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,7 +88,12 @@ input.checkbox-20 {
   cursor: pointer;
 }
 
-
+.popup-arrow{
+  display: none;
+}
+.popup-content{
+  margin-top: -24px;
+}
 
 /* 아이콘 active */
 .activeIcon span {
