--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@
   font-weight: 400;
   text-decoration: none;
   letter-spacing: 0;
+  white-space: normal;
   word-break: keep-all;
   object-fit: contain;
   list-style: none;
