--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,6 +65,7 @@ textarea {
   outline-color: var(--line-light-gray);
   border-radius: 6px;
   resize: none;
+    accent-color: var(--main);
 }
 
 input:focus,
@@ -85,9 +86,8 @@ input.checkbox-20 {
   width: 20px;
   height: 20px;
   margin-right: 8px;
-  accent-color: var(--main);
-  cursor: pointer;
 }
+
 .width-100{
   width: 100%;
 }
@@ -332,7 +332,11 @@ input.checkbox-20 {
 .display-none {
   display: none;
 }
-
+.justify-center{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 .space-between{
   align-content: space-between;
 }
