--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,7 +53,7 @@ textarea {
   border: none;
   background-color: var(--pure-white);
 }
-button{
+button {
   cursor: pointer;
 }
 
@@ -65,7 +65,7 @@ textarea {
   outline-color: var(--line-light-gray);
   border-radius: 6px;
   resize: none;
-    accent-color: var(--main);
+  accent-color: var(--main);
 }
 
 input:focus,
@@ -88,14 +88,14 @@ input.checkbox-20 {
   margin-right: 8px;
 }
 
-.width-100{
+.width-100 {
   width: 100%;
 }
 
-.popup-arrow{
+.popup-arrow {
   display: none;
 }
-.popup-content{
+.popup-content {
   margin-top: -26px;
   border: 1px solid var(--line-gray);
   /* padding: 4px; */
@@ -103,25 +103,26 @@ input.checkbox-20 {
 }
 
 /* 아이콘 active */
-.activeIcon span,.activeStroke span {
+.activeIcon span,
+.activeStroke span {
   color: var(--main);
   font-weight: var(--bold);
 }
 
-.activeIcon svg{
+.activeIcon svg {
   fill: var(--main);
 }
 
-.disableIcon svg{
+.disableIcon svg {
   fill: var(--font-gray);
 }
 
-.activeStroke svg{
+.activeStroke svg {
   stroke: var(--main);
   color: var(--main);
 }
 
-.disableStroke svg{
+.disableStroke svg {
   stroke: var(--font-gray);
 }
 
@@ -140,8 +141,9 @@ input.checkbox-20 {
 
 /* 배너 폰트 */
 .B-font {
-  font-family: 'GmarketSansMedium';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-family: "GmarketSansMedium";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+    format("woff");
 }
 /* 폰트 두께 설정 */
 .light {
@@ -162,7 +164,7 @@ input.checkbox-20 {
 }
 
 .h5 {
-  font-size: 1.0rem;
+  font-size: 1rem;
 }
 
 .h4 {
@@ -183,11 +185,9 @@ input.checkbox-20 {
 
 /* 마진 설정 */
 
-
 .mt-4 {
   margin-top: 4px;
 }
-
 
 .mt-8 {
   margin-top: 8px;
@@ -201,14 +201,13 @@ input.checkbox-20 {
   margin-top: 16px;
 }
 
-.mb-2{
+.mb-2 {
   margin-bottom: 2px;
 }
 
 .mb-4 {
   margin-bottom: 4px;
 }
-
 
 .mb-6 {
   margin-bottom: 6px;
@@ -290,11 +289,17 @@ input.checkbox-20 {
   margin-left: 50%;
 }
 
-.pd-4{
+.pd-4 {
   padding: 4px;
 }
-.pd-8{
+.pd-8 {
   padding: 8px;
+}
+.pd-16 {
+  padding: 16px;
+}
+.pd-24 {
+  padding: 24px;
 }
 .pb-16 {
   padding-bottom: 16px;
@@ -332,12 +337,12 @@ input.checkbox-20 {
 .display-none {
   display: none;
 }
-.justify-center{
+.justify-center {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
-.space-between{
+.space-between {
   align-content: space-between;
 }
 
@@ -371,7 +376,7 @@ code {
   }
 }
 
-@media screen and (min-width:1024px) {
+@media screen and (min-width: 1024px) {
   .display-none-pc {
     display: none;
   }
