:art: banner font css added

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -138,12 +138,11 @@ input.checkbox-20 {
 .font-alert-red {
   color: var(--alert-red);
 }
-
-/* 배너 폰트 */
-.B-font {
-  font-family: "GmarketSansMedium";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
-    format("woff");
+.font-banner-main {
+  color: var(--main);
+}
+.font-banner-forest {
+  color: #568A35;
 }
 /* 폰트 두께 설정 */
 .light {
@@ -183,6 +182,13 @@ input.checkbox-20 {
   font-size: 1.8rem;
 }
 
+/* 텍스트 드래그 방지 */
+.closedrag{
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 /* 마진 설정 */
 
 .mt-4 {
