:sparkles: 댓글/대댓글 글자수 설정 완료 및 댓글창 높이 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -91,7 +91,9 @@ input.checkbox-20 {
 .width-100 {
   width: 100%;
 }
-
+.min-height-70 {
+  min-height: 70px;
+}
 .popup-arrow {
   display: none;
 }
