--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,11 +87,15 @@ input.checkbox-20 {
   height: 20px;
   margin-right: 8px;
 }
-
 .width-100 {
   width: 100%;
 }
-
+.comment-height {
+  min-height: 70px;
+}
+.review-height {
+  min-height: 150px;
+}
 .popup-arrow {
   display: none;
 }
