:zap: 전문가 계정 페이지 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -412,14 +412,15 @@ code {
 }
 
 .input-file-button {
-    padding: 6px 25px;
-    background-color:transparent;
+    padding: 6px 30px;;
     border-radius: 4px;
-    color: black;
     cursor: pointer;
     height: 34px;
-    border: solid var(--font-gray);
     margin-left: 2%;
     margin-top: 15px;
-  
+    color: var(--main);
+    background-color: var(--pure-white);
+    border: 2px solid var(--main);
+    min-width: 173px;
+    border-radius: var(--sig-border-16);
 }
