:sparckles: weo socket chatting set

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
-
+body{
+  background-color: var(--bg-gray);
+}
 * {
   margin: 0;
   padding: 0;
