--- a/client/src/index.css
+++ b/client/src/index.css
@@ -410,7 +410,7 @@ code {
   width: 66px;
   height: 66px;
   border-radius: 50%;
-  background-color: rgb(148 163 184);
+  border: solid var(--bg-gray)
 }
 
 .input-file-button {
