--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ body{
   text-decoration: none;
   letter-spacing: 0;
   white-space: normal;
-  word-break: keep-all;
+  word-break: break-all;
   object-fit: contain;
   list-style: none;
   -webkit-font-smoothing: antialiased;
